# programming_science

./: .gitignore  README.md
Engine/: CMakeLists.txt  engine.cpp  engine.h  main.cpp  subject.cpp  subject.h  wrapper.cpp  wrapper.h
calculator/: CMakeLists.txt  README.md  calculator.cpp  calculator.h  loader.cpp  loader.h  main.cpp
